[package]
name = "reply-tests"
version = "0.1.0"
authors = ["pyncz <pavelyanycz@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dev-dependencies]
cosmwasm-std = "^1.2"
serde = { version = "1.0.103", default-features = false, features = [ "derive" ] }
caller = { path = "../contracts/caller" }
peer = { path = "../contracts/peer" }
cw-multi-test = "0.17.0"
